--- a/movie1.html
+++ b/movie1.html
@@ -27,15 +27,15 @@
 
   <h2 id = "movie1">Back to the Future</h2>
     <div class="gallery">
-      <img id="image1" src = "../images/movieposter1.jpg" alt="movie poster" width=350px/>
-      <img id="image2" src = "../images/marty-and-parents.jpg" alt="marty with his parents" width="350px"/>
-      <img id="image3" src = "../images/marty_and_doc.jpg" alt="marty and doc time travel" width="350px"/>
-      <img id="image4" src = "../images/marty-hill-valley.jpg" alt="marty in 1955 hill valley" width="350px"/>
-      <img id="image5" src = "../images/marty-lorraine.jpg" alt="marty with his mother" width="350px"/>
-      <img id="image6" src = "../images/delorean.jpg" alt="delorean first time travel" width="350px"/>
-      <img id="image7" src = "../images/marty-george.jpg" alt="marty and his dad at the diner" width="350px"/>
-      <img id="image8" src = "../images/marty-doc-end.jpg" alt="marty and doc trying to get to 1985" width="350px"/>
-      <img id="image9" src = "../images/onto-movie2.jpg" alt="end of movie scene" width="350px"/>
+      <img id="image1" src = "images/movieposter1.jpg" alt="movie poster" width=350px/>
+      <img id="image2" src = "images/marty-and-parents.jpg" alt="marty with his parents" width="350px"/>
+      <img id="image3" src = "images/marty_and_doc.jpg" alt="marty and doc time travel" width="350px"/>
+      <img id="image4" src = "images/marty-hill-valley.jpg" alt="marty in 1955 hill valley" width="350px"/>
+      <img id="image5" src = "images/marty-lorraine.jpg" alt="marty with his mother" width="350px"/>
+      <img id="image6" src = "images/delorean.jpg" alt="delorean first time travel" width="350px"/>
+      <img id="image7" src = "images/marty-george.jpg" alt="marty and his dad at the diner" width="350px"/>
+      <img id="image8" src = "images/marty-doc-end.jpg" alt="marty and doc trying to get to 1985" width="350px"/>
+      <img id="image9" src = "images/onto-movie2.jpg" alt="end of movie scene" width="350px"/>
     </div>
     </main>
 
