--- a/movie2.html
+++ b/movie2.html
@@ -28,15 +28,15 @@
 
   <h2 id = "movie2">Movie Images</h2>
     <div class="gallery">
-      <img id="image_a" src = "../images/2-almanac.jpg.webp" alt="marty with an almanac" width=350px/>
-      <img id="image_b" src = "../images/2-flying-delorean.jpg" alt="a flying delorean" width=350px/>
-      <img id="image_c" src = "../images/2-hoverboard.jpg" alt="marty on a hoverboard" width=350px/>
-      <img id="image_d" src = "../images/2-marty-doc.jpg" alt="marty and doc together" width=350px/>
-      <img id="image_e" src = "../images/2-marty-future-home.jpg" alt="marty in his future home" width=350px/>
-      <img id="image_f" src = "../images/2-movie-poster.jpg.webp" alt="movie 2 poster" width=350px/>
-      <img id="image_g" src = "../images/2-sneakers.jpeg.webp" alt="futuristic sneakers" width=350px/>
-      <img id="image_h" src = "../images/2-stunt-doubles.webp" alt="marty with his stunt doubles" width=350px/>
-      <img id="image_i" src = "../images/2-young-biff.webp" alt="griff in the future" width=350px/>
+      <img id="image_a" src = "images/2-almanac.jpg.webp" alt="marty with an almanac" width=350px/>
+      <img id="image_b" src = "images/2-flying-delorean.jpg" alt="a flying delorean" width=350px/>
+      <img id="image_c" src = "images/2-hoverboard.jpg" alt="marty on a hoverboard" width=350px/>
+      <img id="image_d" src = "images/2-marty-doc.jpg" alt="marty and doc together" width=350px/>
+      <img id="image_e" src = "images/2-marty-future-home.jpg" alt="marty in his future home" width=350px/>
+      <img id="image_f" src = "images/2-movie-poster.jpg.webp" alt="movie 2 poster" width=350px/>
+      <img id="image_g" src = "images/2-sneakers.jpeg.webp" alt="futuristic sneakers" width=350px/>
+      <img id="image_h" src = "images/2-stunt-doubles.webp" alt="marty with his stunt doubles" width=350px/>
+      <img id="image_i" src = "images/2-young-biff.webp" alt="griff in the future" width=350px/>
     </div>
     </main>
 
