--- a/index.html
+++ b/index.html
@@ -3,33 +3,63 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>SI 339 Final Project</title>
   </head>
 </head>
-<body>
+<body class = "main_page">
   <a class = "skip" href="#skip">Skip to Main Content</a>
   <header>
     <nav>
       <ul class="nav_links">
-        <li><a href="index.html">Main Page</a></li>
+        <li class="menu">Menu</li>
+        <li><a href="index.html" class="active">Main Page</a></li>
         <li><a href="movie1.html">Back to the Future 1</a></li>
         <li><a href="movie2.html">Back to the Future 2</a></li>
-        <li><a href="movie3.html">Back to the Future 3</a></li>
       </ul>
   </nav>
 </header>
 <main class="about" id="skip">
-  <h1>Back to the Future</h1>
+  <h1>Back to the Future!</h1>
 
 
   <p>Back to the Future is a movie trilogy about time travel! It is my favorite series and I'm going to educate you on it through my perspective!</p>
+  <p>For the scope of this project, I have decided to exclude the third movie in the series as it is my least favorite, and I'd rather focus my attention on the first two movies.</p>
+  <h2>General Movie Information</h2>
+  <div class="movie_info">
+    <h3>Runtimes:</h3>
+    <div class="runtimes">
+    <ul>
+      <li>Back to the Future: 1h 56m</li>
+      <li>Back to the Future II: 1h 47m</li>
+      <li>Back to the Future III: 1h 58m</li>
+    </ul>
+  </div>
+  <h3>Cast:</h3>
+  <div class="cast">
+    <ul>
+      <li>Marty McFly: Michael J. Fox</li>
+      <li>Dr. Emmett Brown: Christopher Lloyd</li>
+      <li>Lorraine Baines: Lea Thompson</li>
+      <li>George McFly: Crispin Glover</li>
+      <li>Biff Tannen: Thomas F. Wilson</li>
+    </ul>
+  </div>
+  <h3>Other Information:</h3>
+  <div class="accolades">
+    <ul>
+      <li>IMDB: 8.5/10 Stars</li>
+      <li>Metascore: 87</li>
+      <li>Oscar Winner: Best Effects, Sound Effects Editing(1986)</li>
+      <li>Rating: PG</li>
 
-
+    </ul>
+  </div>
+  </div>
   <footer>
     <p>SI 339 Final Project <br/>
       &copy; Maya Contorer - Web Design 2023</p>
   </footer>
+  <script src="js/movies.js"></script>
 </body>
 </html>
