--- a/movie2.html
+++ b/movie2.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>SI 339 Final Project</title>
   </head>
@@ -11,12 +10,12 @@
 <body class = "mov2">
   <a class = "skip" href="#skip">Skip to Main Content</a>
   <header>
-      <nav>
-        <ul class="nav_links">
-          <li><a href="index.html">Main Page</a></li>
-          <li><a href="movie1.html">Back to the Future 1</a></li>
-          <li><a href="movie2.html">Back to the Future 2</a></li>
-          <li><a href="movie3.html">Back to the Future 3</a></li>
+    <nav>
+      <ul class="nav_links">
+        <li class="menu">Menu</li>
+        <li><a href="index.html">Main Page</a></li>
+        <li><a href="movie1.html">Back to the Future 1</a></li>
+        <li><a href="movie2.html" class="active">Back to the Future 2</a></li>
         </ul>
     </nav>
   </header>
@@ -28,21 +27,22 @@
 
   <h2 id = "movie2">Movie Images</h2>
     <div class="gallery">
-      <img id="image_a" src = "images/2-almanac.jpg.webp" alt="marty with an almanac" width=350px/>
-      <img id="image_b" src = "images/2-flying-delorean.jpg" alt="a flying delorean" width=350px/>
-      <img id="image_c" src = "images/2-hoverboard.jpg" alt="marty on a hoverboard" width=350px/>
-      <img id="image_d" src = "images/2-marty-doc.jpg" alt="marty and doc together" width=350px/>
-      <img id="image_e" src = "images/2-marty-future-home.jpg" alt="marty in his future home" width=350px/>
-      <img id="image_f" src = "images/2-movie-poster.jpg.webp" alt="movie 2 poster" width=350px/>
-      <img id="image_g" src = "images/2-sneakers.jpeg.webp" alt="futuristic sneakers" width=350px/>
-      <img id="image_h" src = "images/2-stunt-doubles.webp" alt="marty with his stunt doubles" width=350px/>
-      <img id="image_i" src = "images/2-young-biff.webp" alt="griff in the future" width=350px/>
+      <img id="image_a" src = "images/2-almanac.jpg.webp" alt="marty with an almanac"/>
+      <img id="image_b" src = "images/2-flying-delorean.jpg" alt="a flying delorean"/>
+      <img id="image_c" src = "images/2-hoverboard.jpg" alt="marty on a hoverboard"/>
+      <img id="image_d" src = "images/2-marty-doc.jpg" alt="marty and doc together"/>
+      <img id="image_e" src = "images/2-marty-future-home.jpg" alt="marty in his future home"/>
+      <img id="image_f" src = "images/2-movie-poster.jpg.webp" alt="movie 2 poster"/>
+      <img id="image_g" src = "images/2-sneakers.jpeg.webp" alt="futuristic sneakers"/>
+      <img id="image_h" src = "images/2-stunt-doubles.webp" alt="marty with his stunt doubles"/>
+      <img id="image_i" src = "images/2-young-biff.webp" alt="griff in the future"/>
     </div>
     </main>
 
-  <footer>
-    <p>University of Michigan School of Information <br/>
-      &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>
-  </footer>
+    <footer>
+      <p>SI 339 Final Project <br/>
+        &copy; Maya Contorer - Web Design 2023</p>
+    </footer>
+    <script src="js/movies.js"></script>
 </body>
 </html>
