--- a/movie2.html
+++ b/movie2.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>SI 339 Final Project</title>
   </head>
@@ -43,5 +44,6 @@
       <p>SI 339 Final Project <br/>
         &copy; Maya Contorer - Web Design 2023</p>
     </footer>
+    <script src = "js/movie.js"></script>
 </body>
 </html>
