--- a/movie2.html
+++ b/movie2.html
@@ -24,19 +24,19 @@
   <h1>Back to the Future II</h1>
   <h2>Movie Overview</h2>
 
-  <p>The second movie in the series picks up right where the first movie ends. Doc pulls up to Marty's house in 1985 and claims that Marty and his girlfriend, Jennifer, are in grave danger in the future. Noticing that Doc doesn't leave enough room to reach 88 miles per hour to generate the 1.21 jigawatts required to power the time machine, Marty asks Doc how he plans to get to the future. It is here that we learn that the Delorean is able to fly! Marty, Doc, and Jennifer head to 2015 to find a bleak world which the writers must have imagined our future to look like. Marty steals a sports almanac to bring back to 1985 so that he can make sports bets and become rich, but running into his greatest enemy, Biff Tannen, results in life-altering danger. Biff overhears Marty's plan and goes back to make the bets himself. With so much happening in so many different decades, the space time continuum is yet again at high risk for unravelling. Marty must return to 1955 once more to right his wrongs.</p>
+  <p tabindex=0>The second movie in the series picks up right where the first movie ends. Doc pulls up to Marty's house in 1985 and claims that Marty and his girlfriend, Jennifer, are in grave danger in the future. Noticing that Doc doesn't leave enough room to reach 88 miles per hour to generate the 1.21 jigawatts required to power the time machine, Marty asks Doc how he plans to get to the future. It is here that we learn that the Delorean is able to fly! Marty, Doc, and Jennifer head to 2015 to find a bleak world which the writers must have imagined our future to look like. Marty steals a sports almanac to bring back to 1985 so that he can make sports bets and become rich, but running into his greatest enemy, Biff Tannen, results in life-altering danger. Biff overhears Marty's plan and goes back to make the bets himself. With so much happening in so many different decades, the space time continuum is yet again at high risk for unravelling. Marty must return to 1955 once more to right his wrongs.</p>
 
   <h2 id = "movie2">Movie Images</h2>
     <div class="gallery">
-      <img id="image_a" src = "images/2-almanac.jpg.webp" alt="marty with an almanac"/>
-      <img id="image_b" src = "images/2-flying-delorean.jpg" alt="a flying delorean"/>
-      <img id="image_c" src = "images/2-hoverboard.jpg" alt="marty on a hoverboard"/>
-      <img id="image_d" src = "images/2-marty-doc.jpg" alt="marty and doc together"/>
-      <img id="image_e" src = "images/2-marty-future-home.jpg" alt="marty in his future home"/>
-      <img id="image_f" src = "images/2-movie-poster.jpg.webp" alt="movie 2 poster"/>
-      <img id="image_g" src = "images/2-sneakers.jpeg.webp" alt="futuristic sneakers"/>
-      <img id="image_h" src = "images/2-stunt-doubles.webp" alt="marty with his stunt doubles"/>
-      <img id="image_i" src = "images/2-young-biff.webp" alt="griff in the future"/>
+      <img id="image_a" src = "images/2-almanac.jpg.webp" alt="marty with an almanac" tabindex=0/>
+      <img id="image_b" src = "images/2-flying-delorean.jpg" alt="a flying delorean" tabindex=0/>
+      <img id="image_c" src = "images/2-hoverboard.jpg" alt="marty on a hoverboard" tabindex=0/>
+      <img id="image_d" src = "images/2-marty-doc.jpg" alt="marty and doc together" tabindex=0/>
+      <img id="image_e" src = "images/2-marty-future-home.jpg" alt="marty in his future home" tabindex=0/>
+      <img id="image_f" src = "images/2-movie-poster.jpg.webp" alt="movie 2 poster" tabindex=0/>
+      <img id="image_g" src = "images/2-sneakers.jpeg.webp" alt="futuristic sneakers" tabindex=0/>
+      <img id="image_h" src = "images/2-stunt-doubles.webp" alt="marty with his stunt doubles" tabindex=0/>
+      <img id="image_i" src = "images/2-young-biff.webp" alt="griff in the future" tabindex=0/>
     </div>
     </main>
 
