--- a/movie1.html
+++ b/movie1.html
@@ -24,19 +24,19 @@
   <h1>Back to the Future</h1>
   <h2>Movie Overview</h2>
 
-  <p>The first movie introduces Marty, a mediocre high school student with a mediocre family. His friend, Dr. Emmett Brown, is a middle-aged scientist who's been working on perfecting the art of time travel throughout his sad career. He finally comes up with the Flux Capacitor, the object which makes time travel possible! He transforms an old Delorean into the vessel for time travel, and accidentally sends Marty back to 1955. While there, Marty meets his young parents and starts to unravel the fabric of the space time continuum. He must figure out how to get his parents to fall in love so that he can be born in the future. Marty's final task includes having to get back to his home in 1985.</p>
+  <p tabindex=0>The first movie introduces Marty, a mediocre high school student with a mediocre family. His friend, Dr. Emmett Brown, is a middle-aged scientist who's been working on perfecting the art of time travel throughout his sad career. He finally comes up with the Flux Capacitor, the object which makes time travel possible! He transforms an old Delorean into the vessel for time travel, and accidentally sends Marty back to 1955. While there, Marty meets his young parents and starts to unravel the fabric of the space time continuum. He must figure out how to get his parents to fall in love so that he can be born in the future. Marty's final task includes having to get back to his home in 1985.</p>
 
   <h2 id = "movie1">Movie Images</h2>
     <div class="gallery">
-      <img id="image1" src = "images/movieposter1.jpg" alt="movie poster"/>
-      <img id="image2" src = "images/marty-and-parents.jpg" alt="marty with his parents">
-      <img id="image3" src = "images/marty_and_doc.jpg" alt="marty and doc time travel"/>
-      <img id="image4" src = "images/marty-hill-valley.jpg" alt="marty in 1955 hill valley"/>
-      <img id="image5" src = "images/marty-lorraine.jpg" alt="marty with his mother"/>
-      <img id="image6" src = "images/delorean.jpg" alt="delorean first time travel"/>
-      <img id="image7" src = "images/marty-george.jpg" alt="marty and his dad at the diner"/>
-      <img id="image8" src = "images/marty-doc-end.jpg" alt="marty and doc trying to get to 1985"/>
-      <img id="image9" src = "images/onto-movie2.jpg" alt="end of movie scene"/>
+      <img id="image1" src = "images/movieposter1.jpg" alt="movie poster" tabindex=0/>
+      <img id="image2" src = "images/marty-and-parents.jpg" alt="marty with his parents" tabindex=0/>
+      <img id="image3" src = "images/marty_and_doc.jpg" alt="marty and doc time travel" tabindex=0/>
+      <img id="image4" src = "images/marty-hill-valley.jpg" alt="marty in 1955 hill valley" tabindex=0/>
+      <img id="image5" src = "images/marty-lorraine.jpg" alt="marty with his mother" tabindex=0/>
+      <img id="image6" src = "images/delorean.jpg" alt="delorean first time travel" tabindex=0/>
+      <img id="image7" src = "images/marty-george.jpg" alt="marty and his dad at the diner" tabindex=0/>
+      <img id="image8" src = "images/marty-doc-end.jpg" alt="marty and doc trying to get to 1985" tabindex=0/>
+      <img id="image9" src = "images/onto-movie2.jpg" alt="end of movie scene" tabindex=0/>
     </div>
     </main>
 
